[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/GameEndScreen.gd" id="1"]

[node name="GameEndScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(450, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Spacer1" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Banner" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "You have achieved
DOMINATION VICTORY!"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="CenterContainer/Panel/VBox"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Spacer2" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="ReturnButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Main Menu"

[node name="AgainButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Play Again"

[node name="Spacer3" type="Control" parent="CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
